alterando informações - up

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
                     </div>
                     <div class="card-info">
                         <h2>Starbucks</h2>
-                        <h3>HTML5 e CSS3</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias praesentium recusandae
-                            sequi dolorem alias, deleniti vel fuga explicabo saepe reprehenderit. Eveniet dolor ab
-                            perferendis architecto repudiandae optio sint consequatur tempora!</p>
+                        <p>Gosta de café? Fiz uma replicar  do Starbucks Com HTML e CSS3,
+                            usei CSS Grid para a Organização
+                            <i class="fa-solid fa-hand-point-down"></i>
+                        </p>
                         <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Starbucks/" target="_blank">Veja o
                                 Projeto</a>
@@ -169,10 +169,11 @@
                     </div>
                     <div class="card-info">
                         <h2>Pizza</h2>
-                        <h3>JavaScript</h3>
-                        <p>Descrição do Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis praesentium
-                            voluptatum cumque pariatur laborum in harum nobis nulla doloremque obcaecati deserunt, omnis
-                            repellat dolorem aut quia dignissimos magni quibusdam rerum.</p>
+                        <p>Quem não gosta de uma pizza? Aqui aprendemos a manipular os elementos da tela,
+                            Fazemos uma requisão de um arquivo externo, mas podíamos usar um webserves e aplicar
+                            <i class="fa-solid fa-hand-point-down"></i>
+
+                        </p>
                         <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Pizza/" target="_blank">Veja o Projeto</a>
                         </button>
@@ -185,10 +186,10 @@
                     </div>
                     <div class="card-info">
                         <h2>Quiz</h2>
-                        <h3>HTML5 e CSS c/ JS</h3>
-                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate
-                            voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit
-                            corrupti magni iure, possimus repudiandae praesentium nam!</p>
+                        <p>O quanto você é inteligência para tecnológia? Teste ela AGORA! 😏 <br>
+                            Vimos verificações, loops, mudanças de class e manipulações do DOM <br>
+                            <i class="fa-solid fa-hand-point-down"></i>
+                        </p>
                         <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Quiz/" target="_blank">Veja o Projeto</a>
                         </button>
@@ -202,10 +203,11 @@
                     </div>
                     <div class="card-info">
                         <h2>Urna Eletrônica</h2>
-                        <h3>JavaScript</h3>
-                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate
-                            voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit
-                            corrupti magni iure, possimus repudiandae praesentium nam!</p>
+                        <p>Quem já votou sabe como como é 😬 <br>
+                            Aqui praticamos a lógica em cada etapar, verificações, loops e outras infos. <br>
+                            DICA: números para vereadores: <br> (1° 38111) e (2° 772222) <br> para prefeitos: <br> (1° 99) e (2°84)
+                            <i class="fa-solid fa-hand-point-down"></i>
+                        </p>
                         <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projetos-JS-B7WEB/Urna-Eletr%C3%B4nica/"
                                 target="_blank">Veja o Projeto</a>
@@ -224,23 +226,29 @@
                 </div>
                 <div class="contato-content">
                     <div class="contato-content--left">
-                        <img class="img" src="https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-atmospheric-blue-light-effect-electronic-technology-background-backgroundlight-effect-backgroundelectronic-image_72723.jpg" alt="">
+                        <img class="img"
+                            src="https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-atmospheric-blue-light-effect-electronic-technology-background-backgroundlight-effect-backgroundelectronic-image_72723.jpg"
+                            alt="">
                     </div>
                     <div class="contato-content--right">
                         <form id="form" class="form">
                             <div class="group">
                                 <label for="name">Nome:</label>
-                                <input type="text" name="name" id="name" class="input required" placeholder="Digite seu nome:" oninput="nameValidate()">
+                                <input type="text" name="name" id="name" class="input required"
+                                    placeholder="Digite seu nome:" oninput="nameValidate()">
                                 <span class="span-erro">Nome precisa ter no mínimo 2 caracteres</span>
                             </div>
                             <div class="group">
                                 <label for="email">Email:</label>
-                                <input type="text" name="email" id="email" class="input required" placeholder="Digite seu melhor email:" oninput="emailValidate()">
+                                <input type="text" name="email" id="email" class="input required"
+                                    placeholder="Digite seu melhor email:" oninput="emailValidate()">
                                 <span class="span-erro">Digite um e-mail válido</span>
                             </div>
                             <div class="group">
                                 <label for="textarea">Mensagem:</label>
-                                <textarea name="textarea" id="textarea" class="input required" placeholder="Deixe seu feedback para o desenvolvedor:)" oninput="msgValidate()"></textarea>
+                                <textarea name="textarea" id="textarea" class="input required"
+                                    placeholder="Deixe seu feedback para o desenvolvedor:)"
+                                    oninput="msgValidate()"></textarea>
                                 <span class="span-erro">Campo não pode ser enviado vazio</span>
                             </div>
                             <div class="group">
@@ -253,7 +261,6 @@
         </section>
 
 
-       
 
 
 
@@ -261,7 +268,8 @@
 
 
 
-        
+
+
 
         <section class="sessao-orçamento" id="orçamento">
             <div class="orçamento-wrapper">
