alterando informações - up

--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
                         <h3>HTML5</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
-                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
-                        ab atque ducimus.
+                        <ul>
+                            <li>Listas</li>
+                            <li>Tabelas</li>
+                            <li>Formulários</li>
+                            <li>Semântica</li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                     </div>
                 </div>
 
@@ -79,9 +84,13 @@
                         <h3>CSS3</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
-                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
-                        ab atque ducimus.
+                        <ul>
+                            <li>Flex-Box</li>
+                            <li>CSS Grid</li>
+                            <li>Transições</li>
+                            <li>Responsividade</li>
+                            <li></li>
+                        </ul>
                     </div>
                 </div>
 
@@ -91,9 +100,12 @@
                         <h3>JavaScript</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
-                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
-                        ab atque ducimus.
+                        <ul>
+                            <li>Eventos</li>
+                            <li>Manipulações do DOM</li>
+                            <li>Objetos e Orientação a Objetos</li>
+                            <li>Requisições e Assíncronismo</li>
+                        </ul>
                     </div>
                 </div>
 
