alterando informações - up

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
                             <li>CSS Grid</li>
                             <li>Transições</li>
                             <li>Responsividade</li>
-                            <li></li>
                         </ul>
                     </div>
                 </div>
@@ -115,9 +114,7 @@
                         <h3>Python</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
-                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
-                        ab atque ducimus.
+                        ....A Preencher...
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -126,9 +123,7 @@
                         <h3>React</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
-                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
-                        ab atque ducimus.
+                        ....A Preencher...
                     </div>
                 </div>
 
@@ -138,9 +133,7 @@
                         <h3>GitHub</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
-                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
-                        ab atque ducimus.
+                        ....A Preencher...
                     </div>
                 </div>
 
