--- a/index.html
+++ b/index.html
@@ -114,7 +114,13 @@
                         <h3>Python</h3>
                     </div>
                     <div class="conhecimento-text">
-                        ....A Preencher...
+                        <ul>
+                            <li>Módulos</li>
+                            <li>Condições</li>
+                            <li>Cores</li>
+                            <li>Repetições</li>
+                            <li></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -224,7 +230,7 @@
         </section>
 
 
-        <section class="sessao-contato">
+        <section class="sessao-contato" id="contato">
             <div class="contato-width">
                 <div class="contato-header">
                     <h1>Contato</h1>
